--- a/src/components/page-footer/page-footer.module.scss
+++ b/src/components/page-footer/page-footer.module.scss
@@ -1,8 +1,10 @@
-@import "../../styles/colors.scss";
-
 .pageFooter {
   padding: 10px;
   text-align: center;
-  background-color: $green;
-  color: $aqua-marine;
+  background-color: black;
+  color: white;
+
+  span {
+    color: red;
+  }
 }
