--- a/src/components/page-header/page-header.module.scss
+++ b/src/components/page-header/page-header.module.scss
@@ -1,13 +1,14 @@
-@import "../../styles/colors.scss";
-
 .pageHeader {
   font-size: 32px;
   font-weight: 500;
-  background-color: $green;
-  color: $aqua-marine;
+  background-color: black;
+  color: white;
   padding: 10px 40px;
-  box-shadow: 0px 0px 8px 3px $green;
+  box-shadow: 0px 0px 8px 3px black;
   z-index: 1;
   position: sticky;
   top: 0px;
+  span {
+    color: red;
+  }
 }
