--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,3 +1,4 @@
-$green: black;
-$pale-green: white;
-$aqua-marine: white;
+$background-primary: #4cd489;
+$background-primary-hover: powderblue;
+$text-warning: #cc0c2c;
+$text-primary: #5e5c80;
