--- a/src/components/page-header/page-header.module.scss
+++ b/src/components/page-header/page-header.module.scss
@@ -1,14 +1,42 @@
+@import '../../styles/colors.scss';
+
 .pageHeader {
-  font-size: 32px;
-  font-weight: 500;
-  background-color: black;
-  color: white;
-  padding: 10px 40px;
-  box-shadow: 0px 0px 8px 3px black;
+  background-color: $background-primary;
+  color: $text-primary;
+  box-shadow: 0px 0px 8px 3px $background-primary;
   z-index: 1;
   position: sticky;
-  top: 0px;
-  span {
-    color: red;
+  top: 0px; 
+  ol {
+    list-style-type: none;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+
+    li {
+      padding: 10px;
+      font-size: 16px;
+      margin-right: 20px;
+    }
+
+    li:hover {
+      cursor: pointer;
+      border-radius: 15px;
+      background-color: $background-primary-hover;
+      transition: background-color .2s;
+    }
+
+    li:first-child {
+      font-size: 32px;
+      font-weight: bold;
+      span:last-child {
+        color:$text-warning;
+      }
+    }
+
+    .icon {
+      height: 20px;
+      width: 20px;
+    }
   }
 }
