--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,6 @@
 body {
   margin: 0px;
+  font-family: 'Spartan', sans-serif;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Spartan:wght@400;500&display=swap')
