--- a/src/components/icon-select/icon-select.module.scss
+++ b/src/components/icon-select/icon-select.module.scss
@@ -3,14 +3,24 @@
 .iconSelect {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     .box {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         margin-right: 10px;
+        margin-bottom: 10px;
         height: 50px;
         width: 50px;
         border: $text-primary solid 2px;
         border-radius: 5px;
     }
     .active {
-        background-color: powderblue;
+        border-color: $background-primary;
+        color: $background-primary;
+    }
+    .icon {
+        height: 40px;
+        width: 40px;
     }
 }
