--- a/src/components/page-header/page-header.module.scss
+++ b/src/components/page-header/page-header.module.scss
@@ -5,7 +5,7 @@
   box-shadow: 0px 0px 8px 3px $background-primary;
   z-index: 1;
   position: sticky;
-  top: 0px; 
+  top: 0px;
   ol {
     list-style-type: none;
     display: flex;
@@ -13,9 +13,16 @@
     flex-direction: row;
 
     li {
-      padding: 10px;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
       font-size: 16px;
       margin-right: 20px;
+      a {
+        padding: 10px;
+        text-decoration: none;
+        color: $text-primary;
+      }
     }
 
     li:hover {
@@ -34,8 +41,14 @@
     }
 
     .icon {
+      margin-right: 5px;
       height: 20px;
       width: 20px;
+    }
+    @media only screen and (max-device-width: 667px) { 
+        li:not(:first-child) {
+          visibility: hidden;
+        }
     }
   }
 }
