--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,4 +7,12 @@ body {
   font-size: 14px;
 }
 
+html,body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Spartan:wght@400;500&display=swap')
