--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -1,47 +1,47 @@
 @import './colors.scss';
 
-.index {
-  display: grid;
-  grid-template-columns: minmax(1px, 15%) 1fr minmax(0px, 15%);
-  .page {
-    grid-column: 2/3;
-    padding: 20px;
-    flex-wrap: wrap;
 
-    .countrySelector {
-      margin-top: 10px;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: center;
-      label {
-        margin-right: 20px;
-      }
-      .selector {
-        width: 50%;
-      }
-    }
-    .bestTime {
-      margin-top: 10px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-
-      span {
-        font-weight: bold;
-        background-color: $background-primary;
-        border-radius: 5px;
-        padding: 8px;
-        font-size: 18px;
-      }
-    }
-
-    .applianceSelector {
-      margin-top: 10px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-  }
-  
+h1 {
+  margin-top: 40px;
 }
+
+p > a{
+  color: $text-primary;
+}
+
+.countrySelector {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  label {
+    margin-right: 20px;
+  }
+  .selector {
+    width: 50%;
+  }
+}
+
+.bestTime {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  span {
+    font-weight: bold;
+    background-color: $background-primary;
+    border-radius: 5px;
+    padding: 8px;
+    font-size: 18px;
+  }
+}
+
+.applianceSelector {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
