--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -1,5 +1,8 @@
 @import './colors.scss';
 
+article {
+  padding-bottom: 40px;
+}
 
 h1 {
   margin-top: 40px;
@@ -9,21 +12,24 @@ p > a{
   color: $text-primary;
 }
 
+section:nth-child(2) {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .countrySelector {
   margin-top: 10px;
   display: flex;
-  flex-direction: row;
-  align-items: center;
+  flex-direction: column;
   justify-content: center;
   label {
     margin-right: 20px;
-  }
-  .selector {
-    width: 50%;
+    margin-bottom: 10px;
   }
 }
 
-.bestTime {
+.results {
   margin-top: 10px;
   display: flex;
   flex-direction: column;
@@ -45,3 +51,27 @@ p > a{
   align-items: center;
 }
 
+.periodSelect {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+
+  .picker {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 5px;
+    span:first-child {
+      margin-right: 5px;
+    }
+  
+  }
+  .picker:first-child {
+    margin-right: 20px;
+  }
+}
+
+.co2Results > span{
+  font-size: 22px;
+  padding: 16px;
+}
