--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -15,4 +15,16 @@ html,body {
   overflow-x: hidden;
 }
 
+article {
+  padding-bottom: 40px;
+}
+
+a {
+  color: $text-primary;
+}
+
+h1 {
+  margin-top: 40px;
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Spartan:wght@400;500&display=swap')
