--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -1,77 +1,72 @@
 @import './colors.scss';
 
-article {
-  padding-bottom: 40px;
-}
-
-h1 {
-  margin-top: 40px;
-}
-
-p > a{
-  color: $text-primary;
-}
-
-section:nth-child(2) {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.countrySelector {
-  margin-top: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  label {
-    margin-right: 20px;
-    margin-bottom: 10px;
+.index {
+  
+  p > a{
+    color: $text-primary;
   }
-}
-
-.results {
-  margin-top: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  span {
-    font-weight: bold;
-    background-color: $background-primary;
-    border-radius: 5px;
-    padding: 8px;
-    font-size: 18px;
+  
+  section:nth-child(2) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
-}
-
-.applianceSelector {
-  margin-top: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.periodSelect {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-
-  .picker {
+  
+  .countrySelector {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    label {
+      margin-right: 20px;
+      margin-bottom: 10px;
+    }
+  }
+  
+  .results {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  
+    span {
+      font-weight: bold;
+      background-color: $background-primary;
+      border-radius: 5px;
+      padding: 8px;
+      font-size: 18px;
+    }
+  }
+  
+  .applianceSelector {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .periodSelect {
     display: flex;
     flex-direction: row;
-    align-items: center;
-    margin-bottom: 5px;
-    span:first-child {
-      margin-right: 5px;
-    }
+    flex-wrap: wrap;
   
+    .picker {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      margin-bottom: 5px;
+      span:first-child {
+        margin-right: 5px;
+      }
+    
+    }
+    .picker:first-child {
+      margin-right: 20px;
+    }
   }
-  .picker:first-child {
-    margin-right: 20px;
+  
+  .co2Results > span{
+    font-size: 22px;
+    padding: 16px;
   }
-}
-
-.co2Results > span{
-  font-size: 22px;
-  padding: 16px;
 }
