--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -25,6 +25,7 @@ a {
 
 h1 {
   margin-top: 40px;
+  font-size: 22px;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Spartan:wght@400;500&display=swap')
