--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -5,6 +5,13 @@
   p > a{
     color: $text-primary;
   }
+
+  mark {
+    background-color: rgb(199, 199, 199);
+    padding: 1px;
+    font-size: 12px;
+    border-radius: 2px;
+  }
   
   section:nth-child(2) {
     display: flex;
@@ -12,6 +19,7 @@
     align-items: center;
     p {
       text-align: center;
+      line-height: 16px;
     }
   }
   
@@ -49,7 +57,7 @@
     align-items: center;
 
     input {
-      padding: 11px 8px 10px 8px;
+      padding: 10px 8px 9px 8px;
       background-color: hsl(0,0%,100%);
       border-color: hsl(0,0%,80%);
       border-radius: 4px;
@@ -59,6 +67,7 @@
       width: 100px;
       text-align: center;
       font-family: 'Spartan', sans-serif;
+      font-size: 14px;
     }
     input[type=number]::-webkit-inner-spin-button, 
     input[type=number]::-webkit-outer-spin-button { 
@@ -91,6 +100,21 @@
         margin-right: 5px;
       }
     }
+    .timePicker > div {
+      padding: 4px;
+      background-color: white;
+      border-color: hsl(0,0%,80%);
+      border-radius: 4px;
+      border-style: solid;
+      border-width: 1px;
+      font-family: 'Spartan', sans-serif;
+      font-size: 12px;
+    }
+  }
+
+  .timeRangeError {
+    color: $text-warning;
+    font-size: 12px;
   }
   
   .co2Results > span{
